--- a/docs/.vitepress/theme/custom.scss
+++ b/docs/.vitepress/theme/custom.scss
@@ -472,9 +472,6 @@ table .ribbon::after {
   }
 }
 
-.feedback-btn {
-}
-
 .feedback {
   width: 50vw;
   height: 80vh;
@@ -516,112 +513,30 @@ table .ribbon::after {
   position: sticky;
   cursor: pointer;
   left: 90%;
-  bottom: 50px;
+  bottom: 20px;
   z-index: 60;
 }
 .ba-we-love-subscribers:hover {
-    opacity: 1;
-}
-
-.ba-we-love-subscribers.popup-ani {
-  -webkit-transition: all 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  transition: all 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-.ba-we-love-subscribers h1 {
-  font-size: 20px;
-  color: #757575;
-  padding: 25px 0;
-  margin: 0;
-  font-weight: 400;
-  font-family: "Roboto", sans-serif;
-}
-
-.ba-we-love-subscribers .ba-logo {
-  width: 65px;
-  height: 25px;
-  background-position: 0px;
-  margin: 0 auto;
-  opacity: 0.5;
-  cursor: pointer;
-}
-.ba-we-love-subscribers .ba-logo:hover {
   opacity: 1;
 }
-.logo-ani {
-  transition: 0.5s linear;
-  -webkit-transition: 0.5s linear;
-}
-.ba-we-love-subscribers input {
-  font-size: 14px;
-  padding: 12px 15px;
-  border-radius: 15px;
-  border: 0;
-  outline: none;
-  margin: 8px 0;
-  width: 100%;
-  box-sizing: border-box;
-  line-height: normal;
-  /*Bootstrap Overide*/
-  font-family: sans-serif;
-  /*Bootstrap Overide*/
-}
-.ba-we-love-subscribers form {
-  padding: 5px 30px 0;
-  margin-bottom: 15px;
-}
-.ba-we-love-subscribers input[name="email"] {
-  background-color: #eee;
-}
-.ba-we-love-subscribers input[name="submit"] {
-  background-color: #00aeef;
-  cursor: pointer;
-  color: #fff;
-}
-.ba-we-love-subscribers input[name="submit"]:hover {
-  background-color: #26baf1;
-}
 
-.ba-we-love-subscribers-fab {
-  width: 65px;
-  height: 65px;
-  background-color: #00aeef;
-  border-radius: 30px;
-  float: right;
-  box-shadow: 0px 12px 45px rgba(0, 0, 0, 0.3);
-  z-index: 5;
-  position: relative;
-}
-
-.ba-we-love-subscribers-fab .wrap {
-  transform: rotate(0deg);
-  -webkit-transition: all 0.15s cubic-bezier(0.15, 0.87, 0.45, 1.23);
-  transition: all 0.15s cubic-bezier(0.15, 0.87, 0.45, 1.23);
-}
-.ba-we-love-subscribers-fab .ani {
-  transform: rotate(45deg);
-  -webkit-transition: all 0.15s cubic-bezier(0.15, 0.87, 0.45, 1.23);
-  transition: all 0.15s cubic-bezier(0.15, 0.87, 0.45, 1.23);
-}
-.ba-we-love-subscribers-fab .close {
-  background-position: -2px 1px;
-  transform: rotate(-45deg);
-  float: none;
-  /*Bootstrap Overide*/
-  opacity: 1;
-  /*Bootstrap Overide*/
-}
-.ba-we-love-subscribers-wrap {
+iframe {
+  width: 30vw;
+  height: 80vh;
   position: fixed;
-  right: 25px;
-  bottom: 25px;
-  z-index: 1000;
+  top: 73px;
+  left: 68vw;
+  box-shadow: 0px 0px 10px 1px var(--vp-c-green-light);
+  border-radius: 20px;
+  scroll-behavior: smooth;
+  overflow: hidden;
+  z-index: 100;
+  border: none;
 }
-.ba-settings {
-  position: absolute;
-  top: -25px;
-  right: 0px;
-  padding: 10px 20px;
-  background-color: #555;
-  border-radius: 5px;
-  color: #fff;
+
+.true {
+  display: initial;
+}
+.false {
+  display: none;
 }
